vercel.json file updated to install the --legacy-peer-deps

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,5 +4,7 @@
       "source": "/(.*)",
       "destination": "/"
     }
-  ]
+  ],
+  "buildCommand": "cd frontend && npm install --legacy-peer-deps && npm run build",
+  "outputDirectory": "frontend/dist"
 }
