vercel production deploy issue solved

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,5 +6,5 @@
     }
   ],
   "buildCommand": "cd frontend && npm install --legacy-peer-deps && npm run build",
-  "outputDirectory": "frontend/dist"
+  "outputDirectory": "dist"
 }
