--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,6 +5,6 @@
       "destination": "/"
     }
   ],
-  "buildCommand": "cd frontend && npm install --legacy-peer-deps && npm run build",
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "dist"
 }
